--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -66,7 +66,7 @@ include current-theme.conf
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="ZedMono Nerd Font Mono"
+font_family      family="Iosevka"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
