--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,42 +1,29 @@
-# 远程控制
-allow_remote_control yes
-
 # 字体相关
 symbol_map      U+4E00-U+9FFF  Libian SC Regular
-font_size       18.0
+font_size       20.0
 
 # 窗口样式
 # 推荐 0.85-0.95
-background_opacity 0.65
-background_blur 30
-
-# 窗口失焦时自动降低透明度 
-dynamic_background_opacity yes  
+background_opacity 0.8
+# background_blur 40
+# background_tint 0.9
 
 # 隐藏标题栏（全沉浸）
 hide_window_decorations yes  
-
 
 # 关闭窗口不弹确认
 confirm_os_window_close 0    
 
 # 内边距（防止文字贴边）
-window_padding_width 8      
+window_padding_width 8 16      
 
 # tab_bar设置
 # tab_bar 的位置设置
 tab_bar_edge bottom
-
-# 最低一个标签页也会显示
-# tab_bar_min_tabs 1
-
 # 风格（powerline/fade/separator
 tab_bar_style powerline
-
 # 箭头样式
 tab_powerline_style slanted   
-
-#tab_title_template " {index}: {title}{'  {}'.format(num_windows) if num_windows > 1 else ''}"
 
 # 记住窗口大小（关闭时记录尺寸）
 remember_window_size yes
@@ -54,8 +41,17 @@ cursor_stop_blinking_after 15.0
 # 快捷键配置
 map cmd+t new_tab
 map cmd+w close_tab
-map cmd+shift+] next_tab
-map cmd+shift+[ previous_tab
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+] next_tab
+map cmd+[ previous_tab
 
 # 主题
 # BEGIN_KITTY_THEME
